<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardCornerRadius="@dimen/card_radius"
        android:layout_margin="3dp"
        android:elevation="3dp"
        android:layout_gravity="center"
        android:id="@+id/card_view"
        tools:ignore="UnusedAttribute">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/layout_card"
            android:background="@color/colorPrimaryDark">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/movie_cover_height"
            android:id="@+id/img_row"
            android:scaleType="fitXY"
            android:contentDescription="@string/image" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:id="@+id/txv_title"
            android:text="@string/title"
            android:layout_gravity="start"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/whte"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.75">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tx_rate"
                    android:textSize="@dimen/movie_title"
                    android:text="@string/rating"
                    android:layout_toEndOf="@+id/img_row"
                    android:textColor="@color/whte"
                    tools:ignore="NotSibling,SpUsage,UnknownId"
                    android:layout_alignParentTop="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tx_date"
                    android:text="@string/release"
                    android:layout_toEndOf="@+id/img_row"
                    android:textSize="@dimen/movie_title"
                    android:textColor="@color/whte"
                    tools:ignore="NotSibling,SpUsage,UnknownId" />
            </RelativeLayout>

        </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>