<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/viewbg"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.DetailActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/contentDetail"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:text="@string/title"
                android:textStyle="bold"
                android:textSize="@dimen/text_body"
                android:layout_marginTop="@dimen/margin_body"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="@dimen/margin_body"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/user_rating"
                android:text="@string/rating"
                android:textStyle="italic"
                android:textSize="@dimen/text_heading"
                android:layout_marginTop="@dimen/margin_heading"
                app:layout_constraintTop_toBottomOf="@+id/title"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="@dimen/margin_start_heading" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rating"
                android:text="@string/rating"
                android:textStyle="bold"
                android:textSize="@dimen/text_heading"
                android:layout_marginTop="@dimen/margin_heading"
                app:layout_constraintTop_toBottomOf="@+id/title"
                android:layout_marginLeft="@dimen/margin_res"
                app:layout_constraintLeft_toRightOf="@+id/user_rating"
                android:layout_marginStart="@dimen/margin_res" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/release_date"
                android:text="@string/release"
                android:textStyle="italic"
                android:textSize="@dimen/text_heading"
                app:layout_constraintTop_toBottomOf="@+id/user_rating"
                android:layout_marginTop="@dimen/margin_head2"
                android:layout_marginStart="@dimen/margin_start_heading"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/date"
                android:text="@string/release"
                android:textStyle="bold"
                android:textSize="@dimen/text_heading"
                android:layout_marginTop="@dimen/margin_head2"
                app:layout_constraintTop_toBottomOf="@+id/user_rating"
                android:layout_marginLeft="@dimen/margin_res"
                app:layout_constraintLeft_toRightOf="@+id/release_date"
                android:layout_marginStart="@dimen/margin_res" />

            <ImageView
                android:layout_height="2dp"
                android:layout_width="0dp"
                app:layout_constraintTop_toBottomOf="@+id/release_date"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="@dimen/margin_divider"
                android:id="@+id/divider"
                app:layout_constraintHorizontal_bias="0.0"
                android:background="@color/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/plot_synopsis"
                android:text="@string/plot"
                android:textStyle="bold"
                android:textSize="@dimen/text_body"
                android:paddingTop="@dimen/pading_layout"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="@dimen/margin_body"
                android:layout_marginTop="@dimen/margin_body"
                android:layout_marginStart="@dimen/margin_body" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/synopsis"
                android:padding="@dimen/pading_layout"
                android:text="@string/plot"
                android:textStyle="italic"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/plot_synopsis"
                android:layout_marginLeft="@dimen/margin_heading"
                android:layout_marginTop="@dimen/margin_head2"
                android:layout_marginStart="@dimen/margin_heading" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/trailer"
                android:text="@string/trailer"
                android:textStyle="bold"
                android:textSize="@dimen/text_body"
                android:paddingTop="@dimen/pading_layout"
                app:layout_constraintTop_toBottomOf="@+id/synopsis"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="@dimen/margin_body"
                android:layout_marginTop="@dimen/margin_body"
                android:layout_marginStart="@dimen/margin_body" />


            <android.support.v7.widget.RecyclerView
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:id="@+id/trailerList"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trailer"
                android:clipToPadding="false"
                android:layout_marginLeft="@dimen/margin_body"
                android:layout_marginTop="@dimen/margin_body"
                android:layout_marginStart="@dimen/margin_body" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/reviews"
                android:text="@string/review"
                android:textStyle="bold"
                android:textSize="@dimen/text_body"
                android:paddingTop="@dimen/pading_layout"
                app:layout_constraintTop_toBottomOf="@+id/trailerList"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="@dimen/margin_body"
                android:layout_marginTop="@dimen/margin_body"
                android:layout_marginStart="@dimen/margin_body" />

            <android.support.v7.widget.RecyclerView
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:id="@+id/reviewList"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reviews"
                android:clipToPadding="false"
                android:layout_marginLeft="@dimen/margin_body"
                android:layout_marginTop="@dimen/margin_body"
                android:layout_marginStart="@dimen/margin_body" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>